Fancified the auto assembler output.